last files uploaded

--- a/config.ini
+++ b/config.ini
@@ -3,7 +3,7 @@
 MERGE_FOLDER = Merges
 INDEX_FOLDER = indexes
 PARTIAL_SAVES_FOLDER = PartialIndexSaves
-CORPUS_FOLDER = corpus
+CORPUS_FOLDER = C:\Users\JM\Desktop\IR24W-A3-G36\corpus
 SUB_INDEX_FOLDER = ${INDEX_FOLDER}/sub_indexes 
 LOG_FOLDER = Logs
 summaries_folder = summaries_folder
